k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextstep
  labels:
    app.kubernetes.io/name: nextstep
