k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextstep-api-service
  labels:
    app: nextstep-api
spec:
  selector:
    app: nextstep-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
