k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextstep-web-service
  labels:
    app: nextstep-web
spec:
  selector:
    app: nextstep-web
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
